--- a/css/main.css
+++ b/css/main.css
@@ -483,7 +483,14 @@ span{
 }
 
 
-/*----------------------------------------MOBILE----------------------------------------*/
+/*----------------------------------------@MEDIA----------------------------------------*/
+@media(max-width: 3840px){
+	.min-width-1124{
+		min-width: 3067px;
+	}
+}
+
+
 
 @media(max-width:755px){
 
