--- a/css/main.css
+++ b/css/main.css
@@ -184,7 +184,20 @@ span{
 	height: auto;
 }
 
+/*OBJECTS*/
+.agenda-object{
+	position: relative;
+	width: 100%;
+	height: 60px;
+	color: #ffffff;
+	float: left;
+	padding-top: 10px;
+	min-width: 232px;
+}
+
 /*OBJECT ATTRIBUTES*/
+.agenda-object-container{
+}
 .blur-50{
 	-webkit-filter: blur(5px); /* Chrome, Safari, Opera */
     filter: blur(5px);
@@ -267,11 +280,29 @@ span{
 	width: 20px;
 	height: 20px;
 	border-radius: 20px;
-	transform: translateX(calc(-180% - 1px));
+	left: -11px;
+	position: absolute;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #ffffff;
+	background-color: rgba(10,50,92,1);
+	/*transform: translateX(calc(-180% - 1px));*/
 }
 
-.schedule-time{
-	transform: translateX(-160%);
+.agenda-time{
+	position: absolute;
+	left: -110px;
+	width: 80px;
+	text-align: right;
+	cursor: default;
+	color: rgba(215,249,251,1);
+}
+
+.agenda-text{
+	position: absolute;
+	width: 100%;
+	left: 40px;
+	color: #ffffff;
 }
 
 /*POSITION*/
@@ -485,10 +516,6 @@ span{
 	/*overflow: auto;*/
 }
 
-#agenda-object-container{
-	width: 300px;
-}
-
 #schedule-title{
 	
 }
@@ -562,7 +589,7 @@ span{
 		display: none;
 	}
 
-	#bacl-image{
+	#back-image{
 		background-position: right bottom;
 		width: 100%;
 	}
