--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
 /*GLOBAL STYLING*/
 html{
 	height: 100%;
-	overflow: hidden;
+	/*overflow: hidden;*/
 }
 
 body{
@@ -460,7 +460,7 @@ span{
 	color: rgba(255,255,255,1);
 	width: 300px;
 	height: 200px;
-	position: absolute;
+	position: fixed;
 	bottom: -10px;
 	right: 40px;
 	padding: 10px;
@@ -564,7 +564,7 @@ span{
 
 @media(max-width: 1500px){
 	.min-width-1331{
-		min-width: 1500px;
+		min-width: 1331px;
 	}
 	.min-width-999{
 		min-width: 999px;
@@ -616,6 +616,9 @@ span{
 	#back-image{
 		background-position: right bottom;
 		width: 100%;
+	}
+	#schedule-wrapper{
+		margin-left: 25vw;
 	}
 }
 
