--- a/css/main.css
+++ b/css/main.css
@@ -194,6 +194,7 @@ span{
 	float: left;
 	padding-top: 10px;
 	min-width: 232px;
+	cursor: default;
 }
 
 /*OBJECT ATTRIBUTES*/
@@ -276,21 +277,46 @@ span{
 }
 
 .day-sign{
+	cursor: default;
 	/*width: 150px;*/
-	height: 300px;
+	/*height: 300px;*/
+	z-index: 2;
 }
 
 .agenda-trackball{
-	width: 20px;
-	height: 20px;
-	border-radius: 20px;
-	left: -11px;
+	-moz-transition: all .1s ease-in;
+    -o-transition: all .1s ease-in;
+    -webkit-transition: all .1s ease-in;
+    transition: all .1s ease-in;
+	width: 10px;
+	height: 10px;
+	border-radius: 10px;
+	left: -5.5px;
+	margin-top: 6px;
 	position: absolute;
 	border-style: solid;
 	border-width: 2px;
 	border-color: #ffffff;
-	background-color: rgba(10,50,92,1);
+	background-color: rgba(75,75,75,1);
 	/*transform: translateX(calc(-180% - 1px));*/
+}
+
+.agenda-trackball:hover{
+	width: 20px;
+	height: 20px;
+	border-radius: 20px;
+	margin-top: 0;
+	left: -11px;
+	background-color: rgba(10,50,92,1);
+}
+
+.agenda-object:hover > .agenda-trackball{
+	width: 20px;
+	height: 20px;
+	border-radius: 20px;
+	margin-top: 0;
+	left: -11px;
+	background-color: rgba(10,50,92,1);
 }
 
 .agenda-time{
@@ -572,6 +598,16 @@ span{
 
 #image2{
 	background-image: url("../images/mobile-image2.jpg");
+}
+
+#agenda-object-selected .agenda-trackball{
+	width: 20px;
+	margin-top: 0;
+	height: 20px;
+	border-radius: 20px;
+	left: -11px;
+	background-color: rgba(10,50,92,1);
+	z-index: 3;
 }
 
 
