--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,13 @@ span{
 #wrapper{
 	height: auto;
 }
+#registration-reminder{
+	position: absolute;
+	bottom: 0;
+	color: white;
+	left: 0;
+	padding: 15px;
+}
 
 /*COLORS*/
 
@@ -175,6 +182,10 @@ span{
 
 .agenda-tracker{
 	width: 2px;
+	height: 100%;
+}
+.agenda-tracker:nth-child(2){
+	height: 90%;
 }
 
 .min-height-100p{
@@ -575,7 +586,7 @@ span{
 
 #schedule{
 	background-color: rgba(33,35,56,1);
-	padding-bottom: 125px;
+	padding-bottom: 145px;
 	/*height: 500px;*/
 }
 
@@ -702,6 +713,10 @@ span{
 	}
 	#schedule-wrapper{
 		margin-left: 30vw;
+	}
+	#registration-reminder{
+		width: 90%;
+		text-align: center;
 	}
 }
 
