--- a/css/main.css
+++ b/css/main.css
@@ -798,6 +798,10 @@ span{
 	}
 	.arrow-image{
 		position: absolute;
+		-moz-transition: top 999999999999s ease-in;
+	    -o-transition: top 999999999999s ease-in;
+	    -webkit-transition: top 999999999999s ease-in;
+	    transition: top 999999999999s ease-in;
 		top: 0;
 		z-index: 4;
 		width: 100%;
@@ -813,6 +817,10 @@ span{
 		font-size: 0.5em;
 		font-weight: 300;
 		position: absolute;
+		-moz-transition: top 999999999999s ease-in;
+	    -o-transition: top 999999999999s ease-in;
+	    -webkit-transition: top 999999999999s ease-in;
+	    transition: top 999999999999s ease-in;
 		top: 50%;
 		transform: translateY(-50%);
 		margin-top: 25px;
