--- a/css/main.css
+++ b/css/main.css
@@ -774,11 +774,11 @@ span{
 		vertical-align: middle;
 	}
 	.mobile-top-links-container{
-		height: 22px;
+		height: 100%;
 		margin: 0 auto;
 		width: auto;
 		text-align: center;
-		transform: translateY(90%);
+		/*transform: translateY(30%);*/
 	}
 
 	.faq-item{
@@ -804,7 +804,7 @@ span{
 	    transition: top 999999999999s ease-in;
 		top: 0;
 		z-index: 4;
-		width: 100%;
+		width: 100vw;
 		height: 100%;
 		-moz-transition: height 999999999999s ease-in;
 	    -o-transition: height 999999999999s ease-in;
@@ -829,6 +829,7 @@ span{
 	}
 
 	.slideshow-image-placement{
+		cursor: pointer;
 		position: absolute;
 		-moz-transition: top 999999999999s ease-in;
 	    -o-transition: top 999999999999s ease-in;
@@ -846,7 +847,32 @@ span{
 	    -webkit-transition: height 999999999999s ease-in;
 	    transition: height 999999999999s ease-in;
 		height: auto;
+		z-index: 6;
 		
+	}
+
+	.nav-link{
+		-moz-transition: all .3s ease-in;
+	    -o-transition: all .3s ease-in;
+	    -webkit-transition: all .3s ease-in;
+    	transition: all .3s ease-in;
+		height: 100%;
+	}
+
+	.nav-link:hover{
+		
+		background-color: #666666;
+	}
+
+	.nav-link-text{
+		height: 0.9em;
+		font-size: 0.9em;
+		line-height: 0.9em;
+		top: 50%;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		transform: translateY(-50%);
 	}
 
 
@@ -959,9 +985,13 @@ span{
 
 	#arrow-image-left{
 		left: 0;
+		z-index: 5;
 	}
 	#arrow-image-right{
 		right: 0;
+	}
+	#faq-link{
+		vertical-align: middle;
 	}
 }
 
