--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ html{
     -o-transition: height 999999999999s ease-in;
     -webkit-transition: height 999999999999s ease-in;
     transition: height 999999999999s ease-in;*/
-	height: 100vh;
+	/*height: 100vh;*/
 	/*overflow: hidden;*/
 }
 
@@ -26,7 +26,7 @@ body{
     transition: height 999999999999s ease-in;*/
 	height: 100vh;
 	font-family: 'Open Sans', sans-serif;
-	overflow: hidden;
+	overflow: auto;
 }
 
 span{
@@ -249,6 +249,17 @@ span{
 }
 
 /*OBJECT ATTRIBUTES*/
+.no-select {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+.no-select:focus{
+	outline: none;
+}
 .agenda-object-container{
 }
 .blur-50{
@@ -857,6 +868,7 @@ span{
 	    -webkit-transition: all .3s ease-in;
     	transition: all .3s ease-in;
 		height: 100%;
+		text-decoration: none;
 	}
 
 	/*.nav-link:hover{
